# SFH-SGP-Platform

./: .gitignore  OriginalOpenCode_SFH_SGP.md  README.md  SFH_SGP_Systems_Analysis_App_Design.docx
engine/: pyproject.toml  requirements.txt
engine/metadata/: V2_079_METADATA.json
engine/sfh_sgp/: __main__.py
engine/sfh_sgp/api/: main.py
engine/sfh_sgp/core/: anomaly.py  embedding.py  experiments.py  geometry.py  guard.py  transforms.py
engine/sfh_sgp/io/: export.py  ingestion.py  stream.py  synthetic.py
engine/sfh_sgp/storage/: proof_store.py
engine/tests/: requirements.txt  test_core.py  test_experiments.py  test_falsification.py  test_io.py  test_storage.py
examples/: analyse_health.py  analyse_market.py  interactive_demo.py
packaging/rpm/: sfh-sgp-engine.spec
