[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["sfh_sgp*"]

[project]
name = "sfh-sgp-engine"
version = "1.0.0"
description = "SFH-SGP Platform — Signal-Feature-Histogram / Signal Geometry Platform"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "fastapi>=0.100",
    "uvicorn>=0.22",
    "pydantic>=2.0",
]

[project.scripts]
sfh-sgp = "sfh_sgp.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.24",
]
